# horizon

./: Cargo.toml  LICENSE  README.md  readme.md
src/: event.rs  ewmh.rs  horizon.rs  main.rs  prelude.rs  util.rs
src/contrib/: mod.rs
src/state/: datetime.rs  mod.rs  time.rs  wm.rs
src/widgets/: clock.rs  icon.rs  mod.rs  workspaces.rs
src/x/: ewmh.rs  mod.rs  strut.rs  x.rs
styles/: main.css
